[project]
name = "pj-cli"
version = "0.1.0"
description = "pj is a CLI tool."
requires-python = ">=3.13,<4"
dependencies = [
    "rich>=14.1.0,< 14.2.0",
    "dynaconf>=3.2.0,<4",
    "typer>=0.17.4",
    "pyyaml==6.0.2",
    "click>=8.1.8,<8.2",
    "colorama>=0.4.6",
    "platformdirs>=4.4.0",
    "properpath",
]
readme = "README.md"
authors = [{ name = "Mahadi Xion", email = "mhxions@gmail.com" }]
maintainers = [{ name = "Mahadi Xion", email = "mhxions@gmail.com" }]
license = "AGPL-3.0-only"
keywords = [
    "cli",
    "ai",
]
[tool.uv.build-backend]
module-name = "pj"
module-root = "src"

[tool.uv.sources]
properpath = { git = "https://github.com/uhd-urz/properpath.git", rev = "add-mkdoc" }

[project.scripts]
pj = "pj.cli.pj:app"

[build-system]
requires = ["uv_build>=0.7.19,<0.8.0"]
build-backend = "uv_build"

[tool.vendy]
target = 'src/pj/'  # vendy will auto-crate src/pj/_vendor
packages = [
    "haggis==0.14.1",
]
